compilador.output
Regras inúteis no analisador por causa de conflitos

   51 $@8: %empty


Estado 20 conflitos: 4 de deslocamento/redução
Estado 39 conflitos: 1 de redução/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: $@2 parte_declaracoes comando_composto

    5 parte_declaracoes: parte_declara_vars

    6 parte_declara_vars: var

    7 $@3: %empty

    8 var: $@3 VAR declara_vars
    9    | %empty

   10 declara_vars: declara_vars declara_var
   11             | declara_var

   12 $@4: %empty

   13 $@5: %empty

   14 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   15 tipo: IDENT

   16 lista_id_var: lista_id_var VIRGULA IDENT
   17             | IDENT

   18 lista_idents: lista_idents VIRGULA IDENT
   19             | IDENT

   20 comando_composto: T_BEGIN comandos T_END

   21 comandos: comandos comando PONTO_E_VIRGULA
   22         | comando PONTO_E_VIRGULA
   23         | %empty

   24 comando: comando_sem_rotulo

   25 comando_sem_rotulo: atribuicao
   26                   | comando_condicional
   27                   | comando_repetitivo
   28                   | comando_composto

   29 $@6: %empty

   30 atribuicao: IDENT $@6 ATRIBUICAO expressao_simples

   31 expressao: expressao_simples
   32          | relacao

   33 relacao: expressao_simples IGUAL expressao_simples
   34        | expressao_simples DIFERENTE expressao_simples
   35        | expressao_simples MENOR expressao_simples
   36        | expressao_simples MENOR_IGUAL expressao_simples
   37        | expressao_simples MAIOR expressao_simples
   38        | expressao_simples MAIOR_IGUAL expressao_simples

   39 expressao_simples: expressao_simples MAIS termo
   40                  | expressao_simples MENOS termo
   41                  | expressao_simples OR termo
   42                  | termo

   43 termo: termo ASTERISCO fator
   44      | termo DIV fator
   45      | termo AND fator
   46      | fator

   47 fator: IDENT
   48      | NUMERO

   49 $@7: %empty

   50 comando_condicional: IF expressao $@7 THEN comando_sem_rotulo

   51 $@8: %empty

   52 $@9: %empty

   53 $@10: %empty

   54 comando_condicional: IF expressao $@8 THEN comando_sem_rotulo $@9 ELSE $@10 comando_sem_rotulo

   55 $@11: %empty

   56 $@12: %empty

   57 comando_repetitivo: WHILE $@11 expressao $@12 DO comando_sem_rotulo


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2
FECHA_PARENTESES (260) 2
NUMERO (261) 48
VIRGULA (262) 16 18
PONTO_E_VIRGULA (263) 2 14 21 22
DOIS_PONTOS (264) 14
PONTO (265) 2
T_BEGIN (266) 20
T_END (267) 20
VAR (268) 8
IDENT (269) 2 15 16 17 18 19 30 47
ATRIBUICAO (270) 30
MAIS (271) 39
MENOS (272) 40
DIV (273) 44
ASTERISCO (274) 43
IGUAL (275) 33
DIFERENTE (276) 34
MENOR (277) 35
MENOR_IGUAL (278) 36
MAIOR (279) 37
MAIOR_IGUAL (280) 38
IF (281) 50 54
THEN (282) 50 54
ELSE (283) 54
WHILE (284) 57
DO (285) 57
AND (286) 45
OR (287) 41


Não terminais com as regras onde eles aparecem

$accept (33)
    à esquerda: 0
programa (34)
    à esquerda: 2, à direita: 0
$@1 (35)
    à esquerda: 1, à direita: 2
bloco (36)
    à esquerda: 4, à direita: 2
$@2 (37)
    à esquerda: 3, à direita: 4
parte_declaracoes (38)
    à esquerda: 5, à direita: 4
parte_declara_vars (39)
    à esquerda: 6, à direita: 5
var (40)
    à esquerda: 8 9, à direita: 6
$@3 (41)
    à esquerda: 7, à direita: 8
declara_vars (42)
    à esquerda: 10 11, à direita: 8 10
declara_var (43)
    à esquerda: 14, à direita: 10 11
$@4 (44)
    à esquerda: 12, à direita: 14
$@5 (45)
    à esquerda: 13, à direita: 14
tipo (46)
    à esquerda: 15, à direita: 14
lista_id_var (47)
    à esquerda: 16 17, à direita: 14 16
lista_idents (48)
    à esquerda: 18 19, à direita: 2 18
comando_composto (49)
    à esquerda: 20, à direita: 4 28
comandos (50)
    à esquerda: 21 22 23, à direita: 20 21
comando (51)
    à esquerda: 24, à direita: 21 22
comando_sem_rotulo (52)
    à esquerda: 25 26 27 28, à direita: 24 50 54 57
atribuicao (53)
    à esquerda: 30, à direita: 25
$@6 (54)
    à esquerda: 29, à direita: 30
expressao (55)
    à esquerda: 31 32, à direita: 50 54 57
relacao (56)
    à esquerda: 33 34 35 36 37 38, à direita: 32
expressao_simples (57)
    à esquerda: 39 40 41 42, à direita: 30 31 33 34 35 36 37 38 39
    40 41
termo (58)
    à esquerda: 43 44 45 46, à direita: 39 40 41 42 43 44 45
fator (59)
    à esquerda: 47 48, à direita: 43 44 45 46
comando_condicional (60)
    à esquerda: 50 54, à direita: 26
$@7 (61)
    à esquerda: 49, à direita: 50
$@8 (62)
    à esquerda: 51, à direita: 54
$@9 (63)
    à esquerda: 52, à direita: 54
$@10 (64)
    à esquerda: 53, à direita: 54
comando_repetitivo (65)
    à esquerda: 57, à direita: 27
$@11 (66)
    à esquerda: 55, à direita: 57
$@12 (67)
    à esquerda: 56, à direita: 57


Estado 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end .

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   19 lista_idents: IDENT .

    $padrão  reduzir usando a regra 19 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   18 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


Estado 10

   18 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 12


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    $padrão  reduzir usando a regra 3 ($@2)

    bloco  ir ao estado 13
    $@2    ir ao estado 14


Estado 12

   18 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 18 (lista_idents)


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 15


Estado 14

    4 bloco: $@2 . parte_declaracoes comando_composto

    T_BEGIN   reduzir usando a regra 9 (var)
    $padrão  reduzir usando a regra 7 ($@3)

    parte_declaracoes   ir ao estado 16
    parte_declara_vars  ir ao estado 17
    var                 ir ao estado 18
    $@3                 ir ao estado 19


Estado 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


Estado 16

    4 bloco: $@2 parte_declaracoes . comando_composto

    T_BEGIN  deslocar, e ir ao estado 20

    comando_composto  ir ao estado 21


Estado 17

    5 parte_declaracoes: parte_declara_vars .

    $padrão  reduzir usando a regra 5 (parte_declaracoes)


Estado 18

    6 parte_declara_vars: var .

    $padrão  reduzir usando a regra 6 (parte_declara_vars)


Estado 19

    8 var: $@3 . VAR declara_vars

    VAR  deslocar, e ir ao estado 22


Estado 20

   20 comando_composto: T_BEGIN . comandos T_END

    T_BEGIN  deslocar, e ir ao estado 20
    IDENT    deslocar, e ir ao estado 23
    IF       deslocar, e ir ao estado 24
    WHILE    deslocar, e ir ao estado 25

    T_BEGIN   [reduzir usando a regra 23 (comandos)]
    IDENT     [reduzir usando a regra 23 (comandos)]
    IF        [reduzir usando a regra 23 (comandos)]
    WHILE     [reduzir usando a regra 23 (comandos)]
    $padrão  reduzir usando a regra 23 (comandos)

    comando_composto     ir ao estado 26
    comandos             ir ao estado 27
    comando              ir ao estado 28
    comando_sem_rotulo   ir ao estado 29
    atribuicao           ir ao estado 30
    comando_condicional  ir ao estado 31
    comando_repetitivo   ir ao estado 32


Estado 21

    4 bloco: $@2 parte_declaracoes comando_composto .

    $padrão  reduzir usando a regra 4 (bloco)


Estado 22

    8 var: $@3 VAR . declara_vars

    $padrão  reduzir usando a regra 12 ($@4)

    declara_vars  ir ao estado 33
    declara_var   ir ao estado 34
    $@4           ir ao estado 35


Estado 23

   30 atribuicao: IDENT . $@6 ATRIBUICAO expressao_simples

    $padrão  reduzir usando a regra 29 ($@6)

    $@6  ir ao estado 36


Estado 24

   50 comando_condicional: IF . expressao $@7 THEN comando_sem_rotulo
   54                    | IF . expressao $@8 THEN comando_sem_rotulo $@9 ELSE $@10 comando_sem_rotulo

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao          ir ao estado 39
    relacao            ir ao estado 40
    expressao_simples  ir ao estado 41
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 25

   57 comando_repetitivo: WHILE . $@11 expressao $@12 DO comando_sem_rotulo

    $padrão  reduzir usando a regra 55 ($@11)

    $@11  ir ao estado 44


Estado 26

   28 comando_sem_rotulo: comando_composto .

    $padrão  reduzir usando a regra 28 (comando_sem_rotulo)


Estado 27

   20 comando_composto: T_BEGIN comandos . T_END
   21 comandos: comandos . comando PONTO_E_VIRGULA

    T_BEGIN  deslocar, e ir ao estado 20
    T_END    deslocar, e ir ao estado 45
    IDENT    deslocar, e ir ao estado 23
    IF       deslocar, e ir ao estado 24
    WHILE    deslocar, e ir ao estado 25

    comando_composto     ir ao estado 26
    comando              ir ao estado 46
    comando_sem_rotulo   ir ao estado 29
    atribuicao           ir ao estado 30
    comando_condicional  ir ao estado 31
    comando_repetitivo   ir ao estado 32


Estado 28

   22 comandos: comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 47


Estado 29

   24 comando: comando_sem_rotulo .

    $padrão  reduzir usando a regra 24 (comando)


Estado 30

   25 comando_sem_rotulo: atribuicao .

    $padrão  reduzir usando a regra 25 (comando_sem_rotulo)


Estado 31

   26 comando_sem_rotulo: comando_condicional .

    $padrão  reduzir usando a regra 26 (comando_sem_rotulo)


Estado 32

   27 comando_sem_rotulo: comando_repetitivo .

    $padrão  reduzir usando a regra 27 (comando_sem_rotulo)


Estado 33

    8 var: $@3 VAR declara_vars .
   10 declara_vars: declara_vars . declara_var

    IDENT     reduzir usando a regra 12 ($@4)
    $padrão  reduzir usando a regra 8 (var)

    declara_var  ir ao estado 48
    $@4          ir ao estado 35


Estado 34

   11 declara_vars: declara_var .

    $padrão  reduzir usando a regra 11 (declara_vars)


Estado 35

   14 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 49

    lista_id_var  ir ao estado 50


Estado 36

   30 atribuicao: IDENT $@6 . ATRIBUICAO expressao_simples

    ATRIBUICAO  deslocar, e ir ao estado 51


Estado 37

   48 fator: NUMERO .

    $padrão  reduzir usando a regra 48 (fator)


Estado 38

   47 fator: IDENT .

    $padrão  reduzir usando a regra 47 (fator)


Estado 39

   50 comando_condicional: IF expressao . $@7 THEN comando_sem_rotulo
   54                    | IF expressao . $@8 THEN comando_sem_rotulo $@9 ELSE $@10 comando_sem_rotulo

    THEN      reduzir usando a regra 49 ($@7)
    THEN      [reduzir usando a regra 51 ($@8)]
    $padrão  reduzir usando a regra 49 ($@7)

    $@7  ir ao estado 52
    $@8  ir ao estado 53


Estado 40

   32 expressao: relacao .

    $padrão  reduzir usando a regra 32 (expressao)


Estado 41

   31 expressao: expressao_simples .
   33 relacao: expressao_simples . IGUAL expressao_simples
   34        | expressao_simples . DIFERENTE expressao_simples
   35        | expressao_simples . MENOR expressao_simples
   36        | expressao_simples . MENOR_IGUAL expressao_simples
   37        | expressao_simples . MAIOR expressao_simples
   38        | expressao_simples . MAIOR_IGUAL expressao_simples
   39 expressao_simples: expressao_simples . MAIS termo
   40                  | expressao_simples . MENOS termo
   41                  | expressao_simples . OR termo

    MAIS         deslocar, e ir ao estado 54
    MENOS        deslocar, e ir ao estado 55
    IGUAL        deslocar, e ir ao estado 56
    DIFERENTE    deslocar, e ir ao estado 57
    MENOR        deslocar, e ir ao estado 58
    MENOR_IGUAL  deslocar, e ir ao estado 59
    MAIOR        deslocar, e ir ao estado 60
    MAIOR_IGUAL  deslocar, e ir ao estado 61
    OR           deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 31 (expressao)


Estado 42

   42 expressao_simples: termo .
   43 termo: termo . ASTERISCO fator
   44      | termo . DIV fator
   45      | termo . AND fator

    DIV        deslocar, e ir ao estado 63
    ASTERISCO  deslocar, e ir ao estado 64
    AND        deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 42 (expressao_simples)


Estado 43

   46 termo: fator .

    $padrão  reduzir usando a regra 46 (termo)


Estado 44

   57 comando_repetitivo: WHILE $@11 . expressao $@12 DO comando_sem_rotulo

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao          ir ao estado 66
    relacao            ir ao estado 40
    expressao_simples  ir ao estado 41
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 45

   20 comando_composto: T_BEGIN comandos T_END .

    $padrão  reduzir usando a regra 20 (comando_composto)


Estado 46

   21 comandos: comandos comando . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 67


Estado 47

   22 comandos: comando PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 22 (comandos)


Estado 48

   10 declara_vars: declara_vars declara_var .

    $padrão  reduzir usando a regra 10 (declara_vars)


Estado 49

   17 lista_id_var: IDENT .

    $padrão  reduzir usando a regra 17 (lista_id_var)


Estado 50

   14 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   16 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 68
    DOIS_PONTOS  deslocar, e ir ao estado 69


Estado 51

   30 atribuicao: IDENT $@6 ATRIBUICAO . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 70
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 52

   50 comando_condicional: IF expressao $@7 . THEN comando_sem_rotulo

    THEN  deslocar, e ir ao estado 71


Estado 53

   54 comando_condicional: IF expressao $@8 . THEN comando_sem_rotulo $@9 ELSE $@10 comando_sem_rotulo

    THEN  deslocar, e ir ao estado 72


Estado 54

   39 expressao_simples: expressao_simples MAIS . termo

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    termo  ir ao estado 73
    fator  ir ao estado 43


Estado 55

   40 expressao_simples: expressao_simples MENOS . termo

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    termo  ir ao estado 74
    fator  ir ao estado 43


Estado 56

   33 relacao: expressao_simples IGUAL . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 75
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 57

   34 relacao: expressao_simples DIFERENTE . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 76
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 58

   35 relacao: expressao_simples MENOR . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 77
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 59

   36 relacao: expressao_simples MENOR_IGUAL . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 78
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 60

   37 relacao: expressao_simples MAIOR . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 79
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 61

   38 relacao: expressao_simples MAIOR_IGUAL . expressao_simples

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    expressao_simples  ir ao estado 80
    termo              ir ao estado 42
    fator              ir ao estado 43


Estado 62

   41 expressao_simples: expressao_simples OR . termo

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    termo  ir ao estado 81
    fator  ir ao estado 43


Estado 63

   44 termo: termo DIV . fator

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    fator  ir ao estado 82


Estado 64

   43 termo: termo ASTERISCO . fator

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    fator  ir ao estado 83


Estado 65

   45 termo: termo AND . fator

    NUMERO  deslocar, e ir ao estado 37
    IDENT   deslocar, e ir ao estado 38

    fator  ir ao estado 84


Estado 66

   57 comando_repetitivo: WHILE $@11 expressao . $@12 DO comando_sem_rotulo

    $padrão  reduzir usando a regra 56 ($@12)

    $@12  ir ao estado 85


Estado 67

   21 comandos: comandos comando PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 21 (comandos)


Estado 68

   16 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 86


Estado 69

   14 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 87

    tipo  ir ao estado 88


Estado 70

   30 atribuicao: IDENT $@6 ATRIBUICAO expressao_simples .
   39 expressao_simples: expressao_simples . MAIS termo
   40                  | expressao_simples . MENOS termo
   41                  | expressao_simples . OR termo

    MAIS   deslocar, e ir ao estado 54
    MENOS  deslocar, e ir ao estado 55
    OR     deslocar, e ir ao estado 62

    $padrão  reduzir usando a regra 30 (atribuicao)


Estado 71

   50 comando_condicional: IF expressao $@7 THEN . comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 20
    IDENT    deslocar, e ir ao estado 23
    IF       deslocar, e ir ao estado 24
    WHILE    deslocar, e ir ao estado 25

    comando_composto     ir ao estado 26
    comando_sem_rotulo   ir ao estado 89
    atribuicao           ir ao estado 30
    comando_condicional  ir ao estado 31
    comando_repetitivo   ir ao estado 32


Estado 72

   54 comando_condicional: IF expressao $@8 THEN . comando_sem_rotulo $@9 ELSE $@10 comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 20
    IDENT    deslocar, e ir ao estado 23
    IF       deslocar, e ir ao estado 24
    WHILE    deslocar, e ir ao estado 25

    comando_composto     ir ao estado 26
    comando_sem_rotulo   ir ao estado 90
    atribuicao           ir ao estado 30
    comando_condicional  ir ao estado 31
    comando_repetitivo   ir ao estado 32


Estado 73

   39 expressao_simples: expressao_simples MAIS termo .
   43 termo: termo . ASTERISCO fator
   44      | termo . DIV fator
   45      | termo . AND fator

    DIV        deslocar, e ir ao estado 63
    ASTERISCO  deslocar, e ir ao estado 64
    AND        deslocar, e ir ao estado 65
